--- a/University(MVC)/appsettings.json
+++ b/University(MVC)/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-I7PR1PF; Database=University; Trusted_Connection=True; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-I7PR1PF; Database=University; Trusted_Connection=True; MultipleActiveResultSets=true",
+    "IdentityConnection": "Server=DESKTOP-I7PR1PF; Database=UniversityIdentity; Trusted_Connection=True; MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
